--- a/Card_Tampering.ipynb
+++ b/Card_Tampering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJ9nKShzcuYZs6MWBVGdYV",
+      "authorship_tag": "ABX9TyMzqXho8p8EGyYHVmLWQiNF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Tz_um6A09WMR"
       },
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "RKiOyB6597mb"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "s0N2zgBn-T5A"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
         "id": "SJYui-mPEDLo",
         "outputId": "61c01c17-e4d8-46e5-f8dc-566199d1fd07"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
         "id": "Nkco1KhaFC-Q",
         "outputId": "f977edda-1469-47bb-9903-5a50d1d05f4e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
         "id": "XPEDdzW8GQH6",
         "outputId": "94386c35-277a-4baa-a6f0-10b250d02636"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -168,7 +168,7 @@
         "id": "qdONq5c-GQLZ",
         "outputId": "794752e2-6e3b-432b-bfc9-9e3a1c9a68d7"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,7 +193,7 @@
       "metadata": {
         "id": "lEoubq1LGQOg"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
       "metadata": {
         "id": "YC1HF6-1HGAr"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -223,7 +223,7 @@
         "id": "m6I_POlyGQRn",
         "outputId": "f4bb12d4-899c-49ce-e18a-e9b5f14f88ea"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
       "metadata": {
         "id": "Dix6q6_MI__C"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -259,7 +259,7 @@
       "metadata": {
         "id": "aW1JYwn4J37b"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +277,7 @@
         "id": "OJ2jlGvMLBp0",
         "outputId": "65e22820-2362-4d43-e5a0-2a4396e1f4d5"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +314,7 @@
         "id": "OkYSbnRyLSJW",
         "outputId": "8376c50d-2a0f-4393-d45f-4bc8efe4194b"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,7 +351,7 @@
         "id": "X3GsO6m1Lhbv",
         "outputId": "c72da8c5-2404-42d1-cf42-438dc739db59"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,7 +388,7 @@
         "id": "VS7no8SXLtnq",
         "outputId": "19030e65-adb7-49c0-efc4-6e3f8cad5423"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,12 +412,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def d():\n",
+        "    color = \"green\"\n",
+        "    def e():\n",
+        "        nonlocal color\n",
+        "        color = \"yellow\"\n",
+        "    e()\n",
+        "    print(\"Color: \" + color)\n",
+        "    color = \"red\"\n",
+        "color = \"blue\"\n",
+        "d()"
+      ],
       "metadata": {
-        "id": "w5COfNItMrsI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w5COfNItMrsI",
+        "outputId": "5af187b4-7540-4cf9-e2e5-66be90639291"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Color: yellow\n"
+          ]
+        }
+      ]
     }
   ]
 }
